{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 903,
  "lineage": "3a19fa17-fb54-c33e-a0fe-026df24b5682",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.72.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-08-11T03:21:27.499-07:00",
            "id": "projects/petsocialmedia-356303/global/addresses/private-ip-ee1a",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "private-ip-ee1a",
            "network": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/networks/pet-social-media-private-network-ee1a",
            "prefix_length": 16,
            "project": "petsocialmedia-356303",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/addresses/private-ip-ee1a"
          },
          "dependencies": [
            "google_compute_network.private_network",
            "random_id.name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "private_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/petsocialmedia-356303/global/networks/pet-social-media-private-network-ee1a",
            "mtu": 0,
            "name": "pet-social-media-private-network-ee1a",
            "project": "petsocialmedia-356303",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/networks/pet-social-media-private-network-ee1a"
          },
          "dependencies": [
            "random_id.name"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "default",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/regions/us-central1/networkEndpointGroups/petsocialmedia-356303--neg--us-central1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/regions/us-east1/networkEndpointGroups/petsocialmedia-356303--neg--us-east1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              },
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/regions/us-west1/networkEndpointGroups/petsocialmedia-356303--neg--us-west1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_key_policy": [
                  {
                    "include_host": true,
                    "include_protocol": true,
                    "include_query_string": true
                  }
                ],
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-08-11T03:29:46.316-07:00",
            "enable_cdn": true,
            "fingerprint": "iLXDd_96BWc=",
            "id": "projects/petsocialmedia-356303/global/backendServices/petsocialmedia-356303-backend-default",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": true,
                "sample_rate": 1
              }
            ],
            "name": "petsocialmedia-356303-backend-default",
            "port_name": "http",
            "project": "petsocialmedia-356303",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/backendServices/petsocialmedia-356303-backend-default",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "data.google_cloud_run_locations.default",
            "google_cloud_run_service.service",
            "google_compute_network.private_network",
            "google_compute_region_network_endpoint_group.default",
            "google_service_account.django",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "random_id.db_name_suffix",
            "random_id.name"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.160.13.50",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-08-11T03:21:27.451-07:00",
            "id": "projects/petsocialmedia-356303/global/addresses/petsocialmedia-356303-address",
            "name": "petsocialmedia-356303-address",
            "prefix_length": 0,
            "project": "petsocialmedia-356303",
            "self_link": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/addresses/petsocialmedia-356303-address"
          }
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/petsocialmedia-356303/global/forwardingRules/petsocialmedia-356303",
            "ip_address": "34.160.13.50",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "petsocialmedia-356303",
            "port_range": "80",
            "project": "petsocialmedia-356303",
            "self_link": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/forwardingRules/petsocialmedia-356303",
            "target": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/targetHttpProxies/petsocialmedia-356303-http-proxy"
          },
          "dependencies": [
            "data.google_cloud_run_locations.default",
            "google_cloud_run_service.service",
            "google_compute_network.private_network",
            "google_compute_region_network_endpoint_group.default",
            "google_service_account.django",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_target_http_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect",
            "random_id.db_name_suffix",
            "random_id.name"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/petsocialmedia-356303/global/forwardingRules/petsocialmedia-356303-https",
            "ip_address": "34.160.13.50",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "petsocialmedia-356303-https",
            "port_range": "443",
            "project": "petsocialmedia-356303",
            "self_link": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/forwardingRules/petsocialmedia-356303-https",
            "target": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/targetHttpsProxies/petsocialmedia-356303-https-proxy"
          },
          "dependencies": [
            "data.google_cloud_run_locations.default",
            "google_cloud_run_service.service",
            "google_compute_network.private_network",
            "google_compute_region_network_endpoint_group.default",
            "google_service_account.django",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_global_address.default",
            "module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.lb-http.google_compute_ssl_certificate.default",
            "module.lb-http.google_compute_target_https_proxy.default",
            "module.lb-http.google_compute_url_map.default",
            "random_id.db_name_suffix",
            "random_id.name"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-11T03:30:19.957-07:00",
            "id": "projects/petsocialmedia-356303/global/targetHttpProxies/petsocialmedia-356303-http-proxy",
            "name": "petsocialmedia-356303-http-proxy",
            "project": "petsocialmedia-356303",
            "proxy_bind": false,
            "proxy_id": 456223493904229588,
            "self_link": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/targetHttpProxies/petsocialmedia-356303-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/urlMaps/petsocialmedia-356303-https-redirect"
          },
          "dependencies": [
            "data.google_cloud_run_locations.default",
            "google_cloud_run_service.service",
            "google_compute_network.private_network",
            "google_compute_region_network_endpoint_group.default",
            "google_service_account.django",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_url_map.default",
            "module.lb-http.google_compute_url_map.https_redirect",
            "random_id.db_name_suffix",
            "random_id.name"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-11T04:29:02.575-07:00",
            "id": "projects/petsocialmedia-356303/global/targetHttpsProxies/petsocialmedia-356303-https-proxy",
            "name": "petsocialmedia-356303-https-proxy",
            "project": "petsocialmedia-356303",
            "proxy_bind": false,
            "proxy_id": 7572783419165858065,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/targetHttpsProxies/petsocialmedia-356303-https-proxy",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/sslCertificates/petsocialmedia-356303-cert"
            ],
            "url_map": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/urlMaps/petsocialmedia-356303-url-map"
          },
          "dependencies": [
            "data.google_cloud_run_locations.default",
            "google_cloud_run_service.service",
            "google_compute_network.private_network",
            "google_compute_region_network_endpoint_group.default",
            "google_service_account.django",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "module.lb-http.google_compute_managed_ssl_certificate.default",
            "module.lb-http.google_compute_ssl_certificate.default",
            "module.lb-http.google_compute_url_map.default",
            "random_id.db_name_suffix",
            "random_id.name"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-11T03:30:08.302-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/backendServices/petsocialmedia-356303-backend-default",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "zyQqpLdZ5YQ=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/petsocialmedia-356303/global/urlMaps/petsocialmedia-356303-url-map",
            "map_id": 3091199596586165471,
            "name": "petsocialmedia-356303-url-map",
            "path_matcher": [],
            "project": "petsocialmedia-356303",
            "self_link": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/urlMaps/petsocialmedia-356303-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.google_cloud_run_locations.default",
            "google_cloud_run_service.service",
            "google_compute_network.private_network",
            "google_compute_region_network_endpoint_group.default",
            "google_service_account.django",
            "google_sql_database_instance.instance",
            "google_vpc_access_connector.connector",
            "module.lb-http.google_compute_backend_service.default",
            "random_id.db_name_suffix",
            "random_id.name"
          ]
        }
      ]
    },
    {
      "module": "module.lb-http",
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "https_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-11T04:28:51.088-07:00",
            "default_route_action": [],
            "default_service": "",
            "default_url_redirect": [
              {
                "host_redirect": "",
                "https_redirect": true,
                "path_redirect": "",
                "prefix_redirect": "",
                "redirect_response_code": "MOVED_PERMANENTLY_DEFAULT",
                "strip_query": false
              }
            ],
            "description": "",
            "fingerprint": "5rRDliOAzps=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/petsocialmedia-356303/global/urlMaps/petsocialmedia-356303-https-redirect",
            "map_id": 600078381192141084,
            "name": "petsocialmedia-356303-https-redirect",
            "path_matcher": [],
            "project": "petsocialmedia-356303",
            "self_link": "https://www.googleapis.com/compute/v1/projects/petsocialmedia-356303/global/urlMaps/petsocialmedia-356303-https-redirect",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}